<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.expediodigital.ventas360.view.NuevoClienteActivity">

    <include layout="@layout/actionbar_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="@dimen/padding_activity_general">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_nombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:drawableLeft="@drawable/ic_person_accent_dark"
                        android:drawableStart="@drawable/ic_person_accent_dark"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/editText_textSize_general"
                        android:hint="@string/hint_nombres"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_apellidoPaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_apellidoPaterno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:drawableLeft="@drawable/ic_person_accent_dark"
                        android:drawableStart="@drawable/ic_person_accent_dark"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/editText_textSize_general"
                        android:hint="@string/hint_apellidoPaterno"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_apellidoMaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_apellidoMaterno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:drawableLeft="@drawable/ic_person_accent_dark"
                        android:drawableStart="@drawable/ic_person_accent_dark"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/editText_textSize_general"
                        android:hint="@string/hint_apellidoMaterno"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_rucDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_rucDni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:drawableLeft="@drawable/ic_account_accent_dark"
                        android:drawableStart="@drawable/ic_account_accent_dark"
                        android:textSize="@dimen/editText_textSize_general"
                        android:inputType="number"
                        android:hint="@string/hint_rucDni"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:drawableLeft="@drawable/ic_phone_accent_dark"
                        android:drawableStart="@drawable/ic_phone_accent_dark"
                        android:textSize="@dimen/editText_textSize_general"
                        android:inputType="number"
                        android:hint="@string/hint_telefono"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_direccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_direction_accent_dark"
                        android:drawableStart="@drawable/ic_direction_accent_dark"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/editText_textSize_general"
                        android:hint="@string/hint_direccion"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_distrito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_distrito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_size_select_accent_dark"
                        android:drawableStart="@drawable/ic_size_select_accent_dark"
                        android:inputType="text"
                        android:imeOptions="actionGo"
                        android:textSize="@dimen/editText_textSize_general"
                        android:hint="@string/hint_distrito"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextViewAsInputEditText"
                    android:text="@string/hint_subGiro"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"/>
                <Spinner
                    android:id="@+id/spn_subGiro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:textSize="@dimen/editText_textSize_general"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextViewAsInputEditText"
                    android:text="@string/hint_ruta"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"/>
                <Spinner
                    android:id="@+id/spn_ruta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/editText_textSize_general"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_modulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_modulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_layers_accent_dark"
                        android:drawableStart="@drawable/ic_layers_accent_dark"
                        android:textSize="@dimen/editText_textSize_general"
                        android:inputType="number"
                        android:hint="@string/hint_modulo"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>

</LinearLayout>
