<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_gradient_background"
    tools:context="com.expediodigital.ventas360.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:paddingTop="@dimen/padding_activity_general">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/xalesmap_icon_white"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".65"
        android:orientation="vertical"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:paddingLeft="@dimen/padding_activity_general"
            android:paddingRight="@dimen/padding_activity_general"
            android:paddingBottom="@dimen/padding_activity_general">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_activity_general"
                android:paddingRight="@dimen/padding_activity_general"
                android:paddingBottom="@dimen/padding_activity_general">

                <!-- Agregado para mover el focus a este linear layout y no al primer edittext -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:theme="@style/EditTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_ruc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ruc"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:focusableInTouchMode="true"
                    android:theme="@style/EditTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_horizontal_activity"
                    android:theme="@style/EditTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_horizontal_activity"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="right"
                    android:text="@string/version_name"
                    android:textColor="@color/dark_bg_light_secondary_text"
                    android:textSize="@dimen/textView_textSize_login" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tv_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sincronice"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textView_textSize_login"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" la aplicación"
                        android:textColor="@color/dark_bg_light_secondary_text"
                        android:textSize="@dimen/textView_textSize_login"
                        android:visibility="invisible" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_horizontal_detalle"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/background_primary_dark_transparente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poweredby"/>
                <TextView
                    android:textColor="@color/background_primary_dark_transparente"
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/textView_textSize_login"
                    android:text="@string/company" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
